skeplib/tests/fixtures/parser/valid/modulo_unary_plus.sk
fn main() -> Int {
  let x = +7 % 3;
  return x;
}
