skeplib/tests/fixtures/parser/invalid/export_empty.sk
export { };

fn main() -> Int {
  return 0;
}
